--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,10 @@
 [deps]
-AlgebraicTemplate = "b66562e1-fa90-4e8b-9505-c909188fab76"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+WiringDiagrams = "5b9ea594-1203-4fda-bf59-275f9928902e"
+
+[sources]
+WiringDiagrams = {path = ".."}
