--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
 name = "WiringDiagrams"
-uuid = "5B9EA594-1203-4FDA-BF59-275F9928902E"
+uuid = "5b9ea594-1203-4fda-bf59-275f9928902e"
 license = "MIT"
 authors = ["Richard Samuelson <rsamuelson@ufl.edu.com>"]
 
@@ -7,6 +7,7 @@ authors = ["Richard Samuelson <rsamuelson@ufl.edu.com>"]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 CliqueTrees = "60701a23-6482-424a-84db-faee86b9b1f8"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [weakdeps]
@@ -19,6 +20,7 @@ OMEinsumExt = "OMEinsum"
 AbstractTrees = "0.4.5"
 CliqueTrees = "1.12.2"
 Graphs = "1.13.1"
-julia = "1.10"
+LinearAlgebra = "1.12.0"
 OMEinsum = "0.9.2"
 SparseArrays = "1"
+julia = "1.10"
