--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,3 +2,6 @@
 WiringDiagrams = "5B9EA594-1203-4FDA-BF59-275F9928902E"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+
+[sources]
+WiringDiagrams = {path=".."}
